syntax = "proto3";

package api;


option go_package = "github.com/chinmayb/brainiac-brawl/api;pb";

import "google/protobuf/timestamp.proto";


// Interface exported by the game server.
service BrainiacBrawl {

  // A Bidirectional streaming gameplay.
  //
  // Accepts a stream of GamePlay while a game is being played,
  // while receiving other GamePlay (e.g. from other users).
  rpc Play(stream GamePlay) returns (stream GamePlay) {}
}

// Gameplay command contains the actual answer to the question. And server returns
// the result of the answer.
message GamePlayCommand {
    // id
    string id = 1;

    // 

    // answer given by the player
    string player_answer  = 2;

    // question
    string question = 3;

    // actual answer
    string correct_answer  = 4;

    // timestamp question was asked
    google.protobuf.Timestamp question_time= 5;
}

// Player is a game player
message Player {
   string id = 1;
   int32 score= 2;
   string name = 3;
   bool is_bot = 4;
   PlayerStatus status = 5;
}

// GameSummary is a message sent after the game is over or
// if the game is not started
message GameSummary {
  repeated Player players = 1;
  Player winner= 2;
  GamePlayStatus status = 3;
}

// playerStatus status
enum PlayerStatus {
    PLAYING = 0;
    WAITING = 1;
    DISCONNECTED = 2;
}


// GamePlayStatus status
enum GamePlayStatus {
    ON_GOING = 0;
    GAME_OVER = 1;
    NOT_STARTED = 2;
}

// GamePlayAction defines the action the host can peform, he can begin
// or end the game
enum GamePlayAction {
    BEGIN = 0;
    END = 1;
}


// A GamePlay is a message sent while playing
message GamePlay {
  string id  = 1;
  string code  = 2;
  Player player = 3;
  oneof cmd{
        GamePlayAction action = 4;
        GameSummary summary = 6;
        GamePlayCommand command = 7;
      }
}
